package com.directi.training.ocp.exercise_refactored;

public enum ResourceType {
    TIME_SLOT,
    SPACE_SLOT
}